<resources>
    <string name="app_name">MetalgoTest</string>
    <string name="tv_email">Email Address</string>
    <string name="placeholder_here">Placeholder here</string>
    <string name="tv_password">Password</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="str_add_new_user">Add New User</string>
    <string name="str_name">Name</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="description">description</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_desc">Min 8 Char | Min 1 Capital and Number</string>
    <string name="confirm_password_desc">Make sure the password matches</string>
    <string name="add_user">Add User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_user">Update User</string>
    <string name="logout">Logout</string>
    <string name="edit_user">Edit User</string>
    <string name="address">Adress\n</string>
    <string name="str_address">Address</string>
</resources>