<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AddUser"
    >

    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/icBullion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_bullion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:contentDescription="@string/description"
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingTop="8dp"
        android:background="@drawable/rounded_bottomsheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/icBullion">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/relativeLayout"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/str_name"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="NotSibling">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_name"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/str_gender"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_below="@id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_male"
                    android:textSize="14sp"
                    android:checked="true"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/str_female" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rg_gender"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/str_address"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="NotSibling">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--        DATE OF BIRTH SEGMENT-->
            <TextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_address"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/str_date_of_birth"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="UnknownId">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDateOfBirth"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:endIconDrawable="@drawable/baseline_calendar_month_24"
                app:endIconMode="custom"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Email Address SEGMENT-->
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_date"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_email"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Phone Number SEGMENT-->
            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_email"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/str_phone_number"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhoneNumber"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Photo Profile SEGMENT-->
            <TextView
                android:id="@+id/tvPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_phone"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/photo_profile"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhoto"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:endIconDrawable="@drawable/baseline_link_24"
                app:endIconMode="custom"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Password SEGMENT-->
            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_photo"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPasswordDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPassword"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/password_desc"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPasswordDesc"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:endIconMode="password_toggle"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Confirm Password SEGMENT-->
            <TextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_password"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_password"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvConfPasswordDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConfirmPassword"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_password_desc"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvConfPasswordDesc"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:endIconMode="password_toggle"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/placeholder_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_conf_password"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#255E92"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/add_user" />
        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>