<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/logo_bullion"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottomsheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_below="@id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingStart="24dp"
            android:text="@string/tv_email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            app:boxCornerRadiusBottomStart="100dp"
            app:boxCornerRadiusBottomEnd="100dp"
            app:boxCornerRadiusTopEnd="100dp"
            app:boxCornerRadiusTopStart="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="6dp"
            app:boxBackgroundColor="@color/white"
            app:expandedHintEnabled="false"
            app:placeholderText="@string/placeholder_here">

            <com.google.android.material.textfield.TextInputEditText
                android:text="admin@email.com"
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_email"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_below="@id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomStart="100dp"
            app:boxCornerRadiusBottomEnd="100dp"
            app:boxCornerRadiusTopEnd="100dp"
            app:boxCornerRadiusTopStart="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="6dp"
            app:boxBackgroundColor="@color/white"
            app:expandedHintEnabled="false"
            app:placeholderText="@string/placeholder_here"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:text="admin123"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_password"
            android:layout_marginTop="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:backgroundTint="#255E92"
            android:text="@string/txt_sign_in"/>

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:backgroundTint="#255E92"
            android:text="@string/str_add_new_user"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>